--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
@@ -26,10 +27,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
-    compile files('libs/commons-logging-1.1.3.jar')
-    compile files('libs/httpclient-4.3.4.jar')
-    compile files('libs/httpcore-4.3.2.jar')
-    compile files('libs/httpmime-4.3.4.jar')
+    compile files('libs/httpmime-4.5.2.jar')
+    compile files('libs/httpcore-4.4.4.jar')
+    compile files('libs/httpclient-4.5.2.jar')
+    compile files('libs/commons-logging-1.2.jar')
 }
 
 android {
@@ -46,3 +47,5 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 }
+
+
