--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".CameraActivity" />
-        <activity android:name=".UploadImage"></activity>
+        <activity android:name=".UploadImageActivity"></activity>
     </application>
 
 </manifest>
