--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    testCompile 'junit:junit:4.12'
     compile files('libs/httpmime-4.5.2.jar')
     compile files('libs/httpcore-4.4.4.jar')
     compile files('libs/httpclient-4.5.2.jar')
     compile files('libs/commons-logging-1.2.jar')
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    testCompile 'junit:junit:4.12'
 }
 
 android {
@@ -47,5 +48,6 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 }
+
 
 
