--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="alekh.imdel">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -37,6 +36,7 @@
             android:name=".UploadActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+        <activity android:name=".ShowPictureActivity"></activity>
     </application>
 
 </manifest>
